design_challenges_01/collectError/20190004/12_error.txt
12.c: In function ‘main’:
12.c:69:2: error: expected declaration or statement at end of input
  exit(0);
  ^
